--- a/Tex/thanks.tex
+++ b/Tex/thanks.tex
@@ -1,5 +1,6 @@
 \begingroup
-\let\cleardoubepage\relax
+\let\cleardoulbepage\relax
+\let\clearepage\relax
 \chapter*{Acknowledgements}
 \endgroup
 \onehalfspacing
