--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -394,7 +394,7 @@ as an estimation of the SNR, which will be further examined by performing simula
 
 
 \section{X-Ray Fluorescence}
-X-ray fluorescence is emitted if atoms are ionised leaving holes in the inner shell, which are subsequently filled by electrons of higher energy levels and the energy difference is emitted as photons (see \fref{fig:levels} for the usual naming convention) . The finite lifetime of the excited states cause a predominantly Lorentzian line shape \cite{attwood1999,van2001}. In the experimental section, iron, copper and gallium atoms are considered - the relevant emission energies, the (experimental) line widths and relative intensities are shown in \fref{tab:elements}.   Roughly, the $K_\alpha$ line widths correspond to coherence times in the 0.4-0.8\,fs range \cite{krause1979}.
+X-ray fluorescence is emitted if atoms are ionised leaving holes in the inner shells, which are subsequently filled by electrons of higher energy levels while the energy difference is emitted as photons, compared to the non-radiating Auger decay which is more likely for lighter atoms and/or L-shell excitation (see \fref{fig:levels} for the usual naming convention) \cite{santra2009}.  The finite lifetime of the excited states cause a predominantly Lorentzian line shape \cite{attwood1999,van2001}. In the experimental section, iron, copper and gallium atoms are considered - the relevant emission energies, the (experimental) line widths and relative intensities are shown in \fref{tab:elements}.   Roughly, the $K_\alpha$ line widths correspond to coherence times in the 0.4-0.8\,fs range \cite{krause1979}. The cross section for $K$-fluorescence is the highest just above the $K$-absorption edge and, for example for iron, an order of magnitude higher than the coherent cross section (see \fref{fig:cross}).
 
 \begin{figure}
 	\centering
