--- a/Tex/app_code.tex
+++ b/Tex/app_code.tex
@@ -97,4 +97,5 @@ An example of generated points is shown in \fref{fig:bridson}.
 
 
 
-\cite{born1980,griffiths2005,loudon2000,mandel1995,baym1997,zernike1938,yabashi2002,santra2009,sorum1987,lajunen04,tono2013}
+\cite{born1980,griffiths2005}
+\cite{mandel1995,baym1997,zernike1938,santra2009,sorum1987,lajunen04,tono2013}
