--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1497,6 +1497,19 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   lccn      = {2001055348},
 }
 
+@Article{pollnau2020,
+  author   = {Markus Pollnau and Marc Eichhorn},
+  journal  = {Progress in Quantum Electronics},
+  title    = {Spectral coherence, Part I: Passive-resonator linewidth, fundamental laser linewidth, and Schawlow-Townes approximation},
+  year     = {2020},
+  issn     = {0079-6727},
+  pages    = {100255},
+  volume   = {72},
+  abstract = {The degree of spectral coherence characterizes the spectral purity of light. It can be equivalently expressed in the time domain by the decay time τ or the quality factor Q of the light-emitting oscillator, the coherence time τ coh or length ℓcoh of emitted light or, via Fourier transformation to the frequency domain, the linewidth Δν of emitted light. We quantify these parameters for the reference situation of a passive Fabry-Pérot resonator. We investigate its spectral line shapes, mode profiles, and Airy distributions and verify that the sum of all mode profiles generates the corresponding Airy distribution. The Fabry-Pérot resonator is described, as an oscillator, by its Lorentzian linewidth and finesse and, as a scanning spectrometer, by its Airy linewidth and finesse. Furthermore, stimulated and spontaneous emission are analyzed semi-classically by employing Maxwell′s equations and the law of energy conservation. Investigation of emission by atoms inside a Fabry-Pérot resonator, the Lorentz oscillator model, the Kramers-Kronig relations, the amplitude-phase diagram, and the summation of quantized electric fields consistently suggests that stimulated and spontaneous emission of light occur with a phase 90° in lead of the incident field. These findings question the quantum-optical picture, which proposed, firstly, that stimulated emission occurred in phase, whereas spontaneous emission occurred at an arbitrary phase angle with respect to the incident field and, secondly, that the laser linewidth were due to amplitude and phase fluctuations induced by spontaneous emission. We emphasize that the first derivation of the Schawlow-Townes laser linewidth was entirely semi-classical but included the four approximations that (i) it is a truly continuous-wave (cw) laser, (ii) it is an ideal four-level laser, (iii) its resonator exhibits no intrinsic losses, and (iv) one photon is coupled spontaneously into the lasing mode per photon-decay time τc of the resonator, independent of the pump rate. After discussing the inconsistencies of existing semi-classical and quantum-optical descriptions of the laser linewidth, we introduce the spectral-coherence factor, which quantifies spectral coherence in an active compared to its underlying passive mode, and derive semi-classically, based on the principle that the gain elongates the photon-decay time and narrows the linewidth, the fundamental linewidth of a single lasing mode. This linewidth is valid for lasers with an arbitrary energy-level system, operating below, at, or above threshold and in a cw or a transient lasing regime, with the gain being smaller, equal, or larger compared to the losses. By applying approximations (i)-(iv) we reproduce the original Schawlow-Townes equation. It provides the hitherto missing link between the description of the laser as an amplifier of spontaneous emission and the Schawlow-Townes equation. Spontaneous emission entails that in a cw lasing mode the gain is smaller than the losses. We verify that also in the quantum-optical approaches to the laser linewidth, based on the density-operator master equation, the gain is smaller than the losses. We conclude this work by presenting the derivation of the laser linewidth in a nut shell.},
+  doi      = {10.1016/j.pquantelec.2020.100255},
+  keywords = {Spectral coherence, Optical resonance, Fabry-Pérot resonator, Resonator linewidth, Finesse, Lasers, Laser theory, Laser resonators, Laser linewidth, Schawlow-Townes equation},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
