--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,12 +3,9 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract three dimensional spatial information with from the X-ray fluorescence of a sample.  
-IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increase the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}.  
-In the only experimental implementation thus far, metal foils were used as the sample, allowing the measurement of the size of the focal spot of the FEL (>100\,nm) \cite{nakumura2020}.
-In this work, major steps towards realizing the spatial resolution potential of the method by imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: 
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. In the only experimental implementation thus far ,the size of the focal spot of the FEL (>100\,nm) has been meassured \cite{nakumura2020}.
 
-A simulation-guided experiment performed at the SACLA FEL facility is presented, utilizing new experimental techniques as well as data processing steps to overcome some of the limitations of IDI. Among others, he first application of Kossel line based orientation determination to IDI 
+In this work, major steps towards realizing the spatial resolution potential of the method by imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: A simulation-guided experiment performed at the SACLA FEL facility is presented, utilizing new experimental techniques as well as processing steps to overcome some of the limitations of IDI. 
 The results of the previously reported imaging of the focus could be reproduced. 
 Even though the goal of increasing the resolution could not yet be achieved, this work provides a basis for upcoming experiments.
 
@@ -19,8 +16,8 @@ Even though the goal of increasing the resolution could not yet be achieved, thi
  	\textbf{Kurzfassung}\vspace{12mm}
  \end{Huge}
 \\
-Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, nutzt die in der astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen um aus Röntgenfluoreszens Strukturinformationen über eine Proble zu extrahieren \cite{classen2017}.  
-In den bislang einzigen veröffentlichten Ergebnisse dieser Methode wird mittels Metalfolien als Proben die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
+Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, verspricht die in der astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen um aus Röntgenfluoreszens hochaufgelöste Strukturinformationen über eine Proble zu extrahieren \cite{classen2017}.  
+In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wird jedoch nur  die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
 
 In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen (Eisennanopartikel) und dreidimensionaler Messung von Einkristellen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln. In der Auswertung der in diesem Experiment aufgenommenen Daten müssen Störeinflüsse minimiert und experimentelle Limitationen ausgeglichen werden. Dies erfolgt u.a. durch die (für IDI erstmalige) Anwendung von Kossellinien basierter Orientierungsbestimmung.  
 Es gelang, die Abbildung des Fokus zu erfolgreich reproduzieren.  Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichtet zu planen.
